Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74359

The macro definition is wrong!

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.12.3, 5.13.1, 5.14.0 Alpha
    • 5.11
    • Core: I/O
    • None
    • All
    • 097bf6fdd234ca7e5707610edfd3c804b3ba2a52 (qt/qtbase/5.12) 0f3ff1823c4bf1fc12280a677b871f381c77d0fb (qt/qtwayland/dev)

      When I define DEFINES += QT_NO_INFO_OUTPUT QT_NO_WARNING_OUTPUT QT_NO_DEBUG_OUTPUT in pro.

      qwaylandshmbackingstore.cpp:402:134: error: macro "qCDebug" passed 2 arguments, but takes just 1
      qCDebug(lcWaylandBackingstore, "QWaylandShmBackingStore: stalling waiting for a buffer to be released from the compositor...");

      Maybe:
      #if defined(QT_NO_DEBUG_OUTPUT)

      1. undef qCDebug
      2. define qCDebug(category) QT_NO_QDEBUG_MACRO()
        #endif
        #if defined(QT_NO_INFO_OUTPUT)
      3. undef qCInfo
      4. define qCInfo(category) QT_NO_QDEBUG_MACRO()
        #endif
        #if defined(QT_NO_WARNING_OUTPUT)
      5. undef qCWarning
      6. define qCWarning(category) QT_NO_QDEBUG_MACRO()
        #endif
        Should be:
        #if defined(QT_NO_DEBUG_OUTPUT)
      7. undef qCDebug
      8. define qCDebug(category, ...) QT_NO_QDEBUG_MACRO()
        #endif
        #if defined(QT_NO_INFO_OUTPUT)
      9. undef qCInfo
      10. define qCInfo(category, ...) QT_NO_QDEBUG_MACRO()
        #endif
        #if defined(QT_NO_WARNING_OUTPUT)
      11. undef qCWarning
      12. define qCWarning(category, ...) QT_NO_QDEBUG_MACRO()
        #endif

      This code in: qt5/qtbase/src/corelib/io/qloggingcategory.h

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kkohne Kai Köhne
            xiaoyan xiao yan
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes